# futils

./: Cargo.toml  Makefile  README.md  TODO  TODO.md  index.html  install.sh  style.css  test.sh
.cargo/: config.toml
attic/: apply.rs  map_file.rs  predicate.rs  reduce.md  reduce.rs
src/: apply.rs  apply_help.md  common.md  common.rs  common_help.md  common_help_verbose.md  common_options.md  common_options_help.md  darwin.rs  enumerated_record.rs  exit_status.md  fields.md  fields.rs  fields_help.md  fields_help_verbose.md  fields_verbose.md  fileid.md  fileid.rs  files.md  files.rs  files_help.md  files_help_verbose.md  files_verbose.md  filter.md  filter.rs  filter_help.md  filter_help_verbose.md  filter_verbose.md  linux.rs  main.md  main.rs  main_help.md  map.md  map.rs  map_help.md  map_help_verbose.md  map_verbose.md  mapx.md  mapx.rs  mapx_verbose.md  (+28 more)
test/: columns.txt
test-data/: columns.txt  common1.txt  common2.txt  farm-animals.txt  numbers.txt
tests/: test.rs
