[package]
authors = ["Chris Palmer"]
name = "futils"
homepage = "https://github.com/noncombatant/futils"
description = "Functional utilities for the POSIX shell"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["functional", "shell"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

atty = "*"
bigdecimal = "*"
bstr = "*"
chrono = "*"
derive_more = "*"
getopt = "*"
itertools ="*"
libc = "*"
locale = "*"
nix = "*"
once_cell = "*"
regex = "*"
rustc_lexer = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shell-words = "*"
tempfile = "*"
termimad = "*"
users = "*"
walkdir = "*"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
overflow-checks = true
