[package]
authors = ["Chris Palmer"]
name = "futils"
repository = "https://github.com/noncombatant/futils"
description = "Functional utilities for the POSIX shell"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["functional", "shell"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"

atty = ">=0.2.14"
base64ct = { version = ">=1.6.0", features = ["alloc"] }
bigdecimal = ">=0.4.5"
bstr = ">=1.9.1"
chrono = { version = ">=0.4.38", features = ["alloc"] }
derive_more = ">=0.99.18"
getopt = ">=1.1.7"
itertools =">=0.13.0"
libc = ">=0.2.155"
locale = ">=0.2.2"
nix = { version = ">=0.29.0", features = ["fs"] }
once_cell = ">=1.19.0"
regex = ">=1.10.5"
rustc_lexer = ">=0.1.0"
serde = { version = ">=1.0.204", features = ["derive"] }
serde_json = ">=1.0.120"
sha2 = ">=0.10.8"
shell-words = ">=1.1.0"
tempfile = ">=3.10.1"
termimad = ">=0.29.4"
users = ">=0.11.0"
walkdir = ">=2.5.0"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
overflow-checks = true
