[package]
authors = ["Chris Palmer"]
name = "futils"
repository = "https://github.com/noncombatant/futils"
description = "Functional utilities for the POSIX shell"
version = "0.6.4"
edition = "2024"
license = "Apache-2.0"
keywords = ["functional", "shell"]
categories = ["command-line-utilities"]

[dependencies]
regex-splitter = { path = "../regex-splitter" }
base64ct = { version = ">=1.6.0", features = ["alloc"] }
bigdecimal = ">=0.4.5"
bstr = ">=1.9.1"
chrono = { version = ">=0.4.38", features = ["alloc"] }
getopt = ">=1.1.7"
itertools =">=0.13.0"
libc = ">=0.2.155"
locale = ">=0.2.2"
nix = { version = ">=0.29.0", features = ["fs"] }
once_cell = ">=1.19.0"
regex = ">=1.10.5"
rustc_lexer = ">=0.1.0"
serde = { version = ">=1.0.204", features = ["derive"] }
serde_json = ">=1.0.120"
shell-words = ">=1.1.0"
termimad = ">=0.29.4"
users = ">=0.11.0"
walkdir = ">=2.5.0"
blake3 = "1.6.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
overflow-checks = true
